--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   
 
   <!--Second half of the page-->
-    <div class="hstack gap-2 d-flex flex-row mb-2 position-relative ms-5" style="background-image: url('images/bg-curve-desktop.svg'); height: 700px; background-repeat: repeat-y">
+    <div class="hstack gap-2 d-flex flex-row mb-2 position-relative ms-5" style="background-image: url('images/bg-curve-desktop.svg'); height: 700px;">
       <div id="text-container" class= "p-3 d-flex flex-column mb-3">
         <h1 id="title2" class="mb-4">Stay productive, wherever you are</h1>
         <p>Never let location be an issue when accessing your files.  Fylo has you <br> covered for all of your file storage needs.</p>
@@ -119,7 +119,6 @@
         <img src="./images/illustration-2.svg" alt="People looking at messages" id="img2" class="rounded float-end me-5" style="width: 40%;">
       </div>
      
-  </section>
    
   <!-- Get free access-->
 <div id="big-cont" class="d-flex flex-row ps-3" style="background-color: hsl(238, 22%, 44%);">
@@ -145,7 +144,7 @@
 
     <div id="footer-cont" class="d-flex flex-row mb-3 position-relative ps-3" style="background-color: hsl(243, 87%, 12%);">
     <div id="small-cont" class="d-flex flex-column mb-3 pt-5 ps-5 mb-5">
-      <img src="./images/logo.svg" alt="Logo" style="width: 60%;">
+      <img src="./images/logo-white.svg" alt="Logo" style="width: 60%;">
 
     <div id="contact-cont" class="d-flex flex-row">
       <img id="phone-icon" class="me-2" src="./images/icon-phone.svg" alt="phone-icon">
